--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <div class="one">
             <h1 class="one">
                 Hi
-                <span id="name">Diah Verlyta Seytaningrum(cill wiuuh)</span>
+                <span id="name">Diah Verlyta Seytaningrum(cill wibuuh)</span>
             </h1>
-            <p class="two" id="greetingText">I really like your name btw!</p>
+            <p class="two" id="greetingText">Happy Sweet Seventeen yaa</p>
         </div>
 
         <div class="three">
@@ -39,7 +39,7 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
+                Happy birthday to youu!! semoga hal baik selalu beriringan denganmu. teruslah tumbuh, melangkah maju, dan meraih impian-impianmu, aku akan melihatmu berproses dari jarak yang paling jauh, menjadi saksi dari setiap perjuangan dan pencapaianmu. meski tak selalu hadir didekatmu, aku akan selalu mendukungmu dengan doa dan harapan terbaik. ketika kamu merasa lelah atau ragu, ingatlah bahwa ada seseorang yang selalu percaya padamu, yang selalu bangga dengan setiap langkahmu, baik itu besar maupun kecil. aku akan selalu menjadi orang yang paling bangga dengan setiap prosesmu, dengan setiap keberhasilan dan bahkan kegagalanmu. karena bagiku, melihatmu berusaha dan tumbuh adalah kebahagiaan tersendiri teruslah melangkah, aku akan selalu mendukungmu. jika kamu membutuhkanku i always in here for you♡
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
@@ -69,7 +69,7 @@
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+                <h5 id="wishText">I Always Proud Of YOUU.;)</h5>
             </div>
         </div>
 
