--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">I Always Proud Of Youu;)</h5>
+                <h5 id="wishText">I Loved You;)</h5>
             </div>
         </div>
 
