--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">I Loved You;)</h5>
+                <h5 id="wishText">I Still Love You;)</h5>
             </div>
         </div>
 
@@ -143,7 +143,7 @@
 
         <div class="nine">
             <p>Okay, now come back and tell me if you liked it.</p>
-            <p id="replay">Or click, if you want to watch it again.</p>
+            <p id="replay">Or refresh, if you want to watch it again.</p>
             <p class="last-smile">:)</p>
         </div>
     </div>
