--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday to youu!! semoga hal baik selalu beriringan denganmu. teruslah tumbuh, melangkah maju, dan meraih impian-impianmu, aku akan melihatmu berproses dari jarak yang paling jauh, menjadi saksi dari setiap perjuangan dan pencapaianmu. meski tak selalu hadir didekatmu, aku akan selalu mendukungmu dengan doa dan harapan terbaik. ketika kamu merasa lelah atau ragu, ingatlah bahwa ada seseorang yang selalu percaya padamu, yang selalu bangga dengan setiap langkahmu, baik itu besar maupun kecil. aku akan selalu menjadi orang yang paling bangga dengan setiap prosesmu, dengan setiap keberhasilan dan bahkan kegagalanmu. karena bagiku, melihatmu berusaha dan tumbuh adalah kebahagiaan tersendiri teruslah melangkah, aku akan selalu mendukungmu. jika kamu membutuhkanku i always in here for you♡
+                Happy birthday to youuu cilll!! semoga hal baik selalu beriringan denganmu. teruslah tumbuh, melangkah maju, dan meraih impian-impianmu, aku akan melihatmu berproses dari jarak yang paling jauh, menjadi saksi dari setiap perjuangan dan pencapaianmu. meski tak selalu hadir didekatmu, aku akan selalu mendukungmu dengan doa dan harapan terbaik. ketika kamu merasa lelah atau ragu, ingatlah bahwa ada seseorang yang selalu percaya padamu, yang selalu bangga dengan setiap langkahmu, baik itu besar maupun kecil. aku akan selalu menjadi orang yang paling bangga dengan setiap prosesmu, dengan setiap keberhasilan dan bahkan kegagalanmu. karena bagiku, melihatmu berusaha dan tumbuh adalah kebahagiaan tersendiri teruslah melangkah, aku akan selalu mendukungmu. jika kamu membutuhkanku i always in here for you♡
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
@@ -68,7 +68,7 @@
             <img src="./img/riszzta.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
-                <h3 class="wish-hbd">Happy Birthday!</h3>
+                <h3 class="wish-hbd">Happy Birthday cilll!</h3>
                 <h5 id="wishText">I Still Love You;)</h5>
             </div>
         </div>
