--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <p>Okay, now come back and tell me if you liked it.</p>
             <p id="replay">Or refresh, if you want to watch it again.</p>
             <p class="last-smile">:)</p>
-           <a href="https://open.spotify.com/playlist/7qV4Ltq3Q18ikWM1xftEaw?si=S6kPr7AvTLWFf1WsXkAn8g&pi=3EsETyVgS5SNS">I made a special playlist for you</a>
+           <a href="https://open.spotify.com/playlist/7qV4Ltq3Q18ikWM1xftEaw?si=S6kPr7AvTLWFf1WsXkAn8g&pi=3EsETyVgS5SNS" target="_blank">i made playlist special for you</a>
         </div>
     </div>
 
