tambah tua.html

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday cilll!</h3>
-                <h5 id="wishText">I Still Love You;)</h5>
+                <h5 id="wishText">Selamat tambah Tuaaaaaaaa:)</h5>
             </div>
         </div>
 
